--- a/php-projektas/public_html/assets/css/style.css
+++ b/php-projektas/public_html/assets/css/style.css
@@ -36,12 +36,13 @@ header {
 
 /*Images*/
 .container-big-img {
-    background: url("../images/taxi.jpg");
     height: 300px;
-    background-position: center;
-    background-repeat: no-repeat;
+    background: url("../images/taxi12 (1).jpg") center center ;
+    background-position: center center;
+
     background-size: cover;
-    background-attachment: local;
+
+
 }
 
 /*Container*/
@@ -153,4 +154,14 @@ footer {
     color: black;
 }
 
+form#register label {
+    display:block;
+}
+form#register .error {
+    color:red;
+    font-size:.8em;
+}
 
+nav .active {
+    background-color: gray;
+}
